fix: re-enable dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -210,9 +210,9 @@ footer {
   opacity: 1;
 }
 
-/* @media (prefers-color-scheme: dark) { */
-/*   html { */
-/*     --bg: darkslategray; */
-/*     --fg: cornsilk; */
-/*   } */
-/* } */
+@media (prefers-color-scheme: dark) {
+  html {
+    --bg: darkslategray;
+    --fg: cornsilk;
+  }
+}
